--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: Just the Docs Template
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
+source: content
+
 url: https://just-the-docs.github.io
 
 aux_links:
